crates/unsoundness_checker/tests/snapshots/typing_type_is_used/markdown_test__snippet_02.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> snippet_02.py:3:26
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int(x: object) -> TypeIs[int]:
  |                          ^^^^^^^^^^^
4 |     return isinstance(x, int)
  |
info: rule `typing-type-is-used` was selected in the configuration file
