crates/unsoundness_checker/tests/snapshots/typing_type_is_used/markdown_test__snippet_03_mypy.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
<temp_dir>/snippet_03.py:1: error: Module "typing" has no attribute "TypeIs"  [attr-defined]
<temp_dir>/snippet_03.py:1: note: Use `from typing_extensions import TypeIs` instead
<temp_dir>/snippet_03.py:1: note: See https://mypy.readthedocs.io/en/stable/runtime_troubles.html#using-new-additions-to-the-typing-module
Found 1 error in 1 file (checked 1 source file)
