crates/unsoundness_checker/tests/snapshots/typing_type_is_used/markdown_test__snippet_03_pyright.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
<temp_dir>/snippet_03.py
  <temp_dir>/snippet_03.py:1:20 - error: "TypeIs" is unknown import symbol (reportAttributeAccessIssue)
1 error, 0 warnings, 0 informations
